AWE/src/objects/Rule_Archive__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rule__c</fullName>
        <label>Evaluation Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Status__c</fullName>
        <description>Captures the status of the Rule prior to be archived</description>
        <label>Prior Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Reference_Id__c</fullName>
        <label>Rule Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Archived&apos;</defaultValue>
        <description>Captures the Status of the Rule</description>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rule Archive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RArc{000000}</displayFormat>
        <label>Rule Archive Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>